# deboche-bot

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  bot_data.sqlite  config.py  db.py  main.py  paginator.py  pyproject.toml  quem_joga_hoje.json
.github/workflows/: python-app.yml
cogs/: ADMIN.py  OSRS.py  anime.py  anime_quote.py  benfica.py  bg3.py  clima.py  country_info.py  data.py  dnd.py  download.py  elogio_duvidoso.py  epstein.py  feriado_pt.py  food.py  free_games.py  fun.py  gaming_stats.py  generate.py  grafico.py  insulto_tuga.py  internet.py  ipma.py  kanye.py  meme.py  meme_gaming.py  music.py  music_quiz.py  news.py  ollama.py  pollinations.py  portugal.py  profile.py  reddit.py  rpg.py  santarem.py  steam.py  steam_loot.py  strategy.py  todo.py  (+4 more)
commands/: anime.py  data.py  economy.py  fun.py  ia.py  joker.py  middleware.py  music.py  news.py  portugal.py  profile.py  santarem.py  space.py  trades.py  weather.py
commands/joker/: game.py  joker.py  questions_pt.json
database/: __init__.py  database.db  schema.sql
