[project]
name = "deboche-bot"
version = "1.0.0"
description = "Robo do deboche! discord"
requires-python = ">=3.10"
dependencies = [
  "discord.py",
  "python-dotenv",
  "cogwatch",
  "jishaku",
  "akinator.py",
  "beautifulsoup4",
  "playwright",
  "discord-ui",
  "yt-dlp",
  "PyNaCl",
  "google-genai",
  "aiosqlite"
]

[tool.setuptools.packages.find]
include = ["cogs*", "database*"]

[project.scripts]
deboche-bot = "main:main"